# cn2en

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  setup.cfg  test_command.txt
src/cn2en/: input_lang.pkl  model.py  output_lang.pkl
tests/: translate_test.py
