[metadata]
name = cn2en
version = 0.0.11
author = Chien Tran
author_email = chientrm@gmail.com
description = Translate Chinese into English using Seq2Seq deep learning model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chientrm/cn2en
project_urls =
    Bug Tracker = https://github.com/chientrm/cn2en/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib >=3.4.3
    torch>=1.9.1@https://download.pytorch.org/whl/cpu/torch_stable.html
include_package_data = True

[options.package_data]
* = *.pkl, *.pth

[options.packages.find]
where = src